--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -25,22 +25,22 @@
             <li>
                 <h2>Politique de mobilité et besoins</h2>
                 <p>My French Hub vous accompagne dans la définition de vos besoins et vous aide à réduire les couts liés à la mobilité. Notre politique est d’offrir nos services tout au long du parcours de recrutement en focalisant nos efforts d’accompagnement le plus en amont et bien avant l’arrivée sur le territoire.</p>
-                <a href="/formation/Formation1"><em>En savoir</em> +</a>
+                <a href="/services/Formation1"><em>En savoir</em> +</a>
             </li>
             <li>
                 <h2>Assistance intégration</h2>
                 <p>My French Hub identifie et organise les différents types de sessions informatives qui répondront aux besoins d’intégration. Nous pouvons, entres autres, organiser des journées de reconnaissance individuelle ou de groupe, proposer des solutions d’accompagnement du retour de vos salariés expatriés.</p>
-                <a href="/formation/Formation2"><em>En savoir</em> +</a>
+                <a href="/services/Formation2"><em>En savoir</em> +</a>
             </li>
             <li>
                 <h2>Marque employeur</h2>
                 <p>My French Hub vous propose ses services au nom et à l’image de votre marque. A vos côtés, nous étudions les axes de valorisation de votre structure et les intégrons à une offre personnalisée.</p>
-                <a href="/formation/Formation3"><em>En savoir</em> +</a>
+                <a href="/services/Formation3"><em>En savoir</em> +</a>
             </li>
             <li>
                 <h2>Engagement qualité</h2>
                 <p>My French Hub s’engage à fournir à ces adhérents un rapport qualitatif des prestations effectuées. Un questionnaire de retour d’expérience est mis en place pour chacune des missions effectuées. Nous fournissons à nos clients les éléments de promotion liés la qualité de l’accueil des talents étrangers au sein de leur structure.  </p>
-                <a href="/formation/Formation3"><em>En savoir</em> +</a>
+                <a href="/services/Formation3"><em>En savoir</em> +</a>
             </li>
         </ul>
         <a href="#mobility" class="scroll_down">scroll</a>
@@ -50,27 +50,27 @@
             <li>
                 <h2>Assistance Arrivée / Départ</h2>
                 <p>Nous définissons un pack d’accueil accompagné d’une session de e-learning, qui inclut la revue des besoins, la coordination et la délivrance des services dans les délais impartis. Un voyage de reconnaissance peut être proposé. Une assistance téléphonique est inclue ainsi que la mise en relation au sein d’une communauté active. Un volet social & culturel peut être proposé.</p>
-                <a href="/relocation/assistance"><em>En savoir</em> +</a>
+                <a href="/mobilite/assistance"><em>En savoir</em> +</a>
             </li>
             <li>
                 <h2>Logement</h2>
                 <p>Nous coordonnons l’ensemble des besoins quels qu’ils soient : logement meublé temporaire, logement en location, mise en services du logement, réservation de résidence hôtelière, assistance à l’ameublement.</p>
-                <a href="/relocation/logement"><em>En savoir</em> +</a>
+                <a href="/mobilite/logement"><em>En savoir</em> +</a>
             </li>
             <li>
                 <h2>Administration</h2>
                 <p>Nous délivrons les besoins administratifs, qu’il s’agisse de l’ouverture du compte bancaire, des contrats d’assurance, de l’échange d’un permis de conduire et de l’immatriculation d’un véhicule, en passant par la protection sociale.</p>
-                <a href="/relocation/administration"><em>En savoir</em> +</a>
+                <a href="/mobilite/administration"><em>En savoir</em> +</a>
             </li>
             <li>
                 <h2>Immigration</h2>
                 <p>Nous prenons en charge le volet autorisation de travail et titre de séjour ainsi que son renouvellement, ainsi que les documents de circulation pour mineurs.</p>
-                <a href="/relocation/immigration"><em>En savoir</em> +</a>
+                <a href="/mobilite/immigration"><em>En savoir</em> +</a>
             </li>
             <li>
                 <h2>Famille</h2>
                 <p>Nous accompagnons les besoins sur les axes interculturels et accompagnement du conjoint et de sa famille ainsi qu’une aide à la scolarité. Une assistance conseil fiscale peut aussi être proposée.</p>
-                <a href="/relocation/famille"><em>En savoir</em> +</a>
+                <a href="/mobilite/famille"><em>En savoir</em> +</a>
             </li>
         </ul><!--
      --><div>
